# lacreiprocessoseletivo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
examination/: models.py  serializers.py  tests.py  urls.py  views.py
examination/migrations/: 0001_initial.py
lacreiprocessoseletivo/: asgi.py  settings.py  urls.py  wsgi.py
professional/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
professional/migrations/: 0001_initial.py  0002_professional_social_name.py
